--- a/ZESDK/ZESDK.vcproj
+++ b/ZESDK/ZESDK.vcproj
@@ -41,10 +41,10 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\Source&quot;;&quot;$(ProjectDir)..\Include&quot;"
-				PreprocessorDefinitions="FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_PERFHUD;ZEDEBUG_BREAKONERROR"
+				PreprocessorDefinitions="FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_BREAKONERROR;ZEDEBUG_BREAKONCRITICALERROR;ZEDEBUG_PERFHUD"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
@@ -61,9 +61,9 @@
 			<Tool
 				Name="VCLibrarianTool"
 				LinkLibraryDependencies="true"
-				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib"
+				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib ogg_static.lib ogg.lib vorbis.lib vorbisenc.lib vorbisfile.lib freeimage.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName)d.lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\OggVorbis\Win32\Debug&quot;;&quot;$(ProjectDir)..\Lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib&quot;"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
 			/>
@@ -111,7 +111,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\Source&quot;;&quot;$(ProjectDir)..\Include&quot;"
 				PreprocessorDefinitions="FREEIMAGE_LIB"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
@@ -128,9 +128,9 @@
 			<Tool
 				Name="VCLibrarianTool"
 				LinkLibraryDependencies="true"
-				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib"
+				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib ogg_static.lib ogg.lib vorbis.lib vorbisenc.lib vorbisfile.lib freeimage.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName).lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\OggVorbis\Win32\Release&quot;;&quot;$(ProjectDir)..\Lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -194,6 +194,22 @@
 			</File>
 			<File
 				RelativePath="..\Source\Core\Core.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Core\DataTree.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Core\DataTree.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Core\DebugAssert.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\Core\DebugAssert.h"
 				>
 			</File>
 			<File
@@ -337,27 +353,11 @@
 			Name="ZEMath"
 			>
 			<File
-				RelativePath="..\Source\ZEMath\3DRectangle.cpp"
+				RelativePath="..\Source\ZEMath\BoundingVolume.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\Source\ZEMath\3DRectangle.h"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\AABoundingBox.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\AABoundingBox.h"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\BoundingSphere.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\BoundingSphere.h"
+				RelativePath="..\Source\ZEMath\BoundingVolume.h"
 				>
 			</File>
 			<File
@@ -373,27 +373,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Source\ZEMath\LineSegment.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\LineSegment.h"
-				>
-			</File>
-			<File
 				RelativePath="..\Source\ZEMath\Matrix.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\Source\ZEMath\Matrix.h"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\OBoundingBox.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\OBoundingBox.h"
 				>
 			</File>
 			<File
@@ -413,27 +397,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Source\ZEMath\Ray.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\Ray.h"
-				>
-			</File>
-			<File
 				RelativePath="..\Source\ZEMath\Rectangle.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\Source\ZEMath\Rectangle.h"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\Triangle.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\Source\ZEMath\Triangle.h"
 				>
 			</File>
 			<File
@@ -460,6 +428,14 @@
 		<Filter
 			Name="GameInterface"
 			>
+			<File
+				RelativePath="..\Source\GameInterface\Actor.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\GameInterface\Actor.h"
+				>
+			</File>
 			<File
 				RelativePath="..\Source\GameInterface\CanvasBrush.cpp"
 				>
@@ -502,6 +478,14 @@
 			</File>
 			<File
 				RelativePath="..\Source\GameInterface\GameProvider.h"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\GameInterface\Item.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\Source\GameInterface\Item.h"
 				>
 			</File>
 			<File
@@ -568,6 +552,18 @@
 				RelativePath="..\Source\GameInterface\SkyBrush.h"
 				>
 			</File>
+			<Filter
+				Name="TestGame"
+				>
+				<File
+					RelativePath="..\Source\GameInterface\TestGame\TestGame.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Source\GameInterface\TestGame\TestGame.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Graphics"
@@ -732,10 +728,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\Source\Graphics\Direct3D9\D3D9ShadersSM2.h"
-					>
-				</File>
-				<File
 					RelativePath="..\Source\Graphics\Direct3D9\D3D9Texture.cpp"
 					>
 				</File>
@@ -779,10 +771,6 @@
 						>
 					</File>
 					<File
-						RelativePath="..\RunDir\resources\shaders\DualParaboloidShadowPass.vs"
-						>
-					</File>
-					<File
 						RelativePath="..\RunDir\resources\shaders\OmniProjectiveLight.ps"
 						>
 					</File>
@@ -820,14 +808,6 @@
 					</File>
 					<File
 						RelativePath="..\RunDir\resources\shaders\ShadowPass.vs"
-						>
-					</File>
-					<File
-						RelativePath="..\RunDir\resources\shaders\SkyBox.ps"
-						>
-					</File>
-					<File
-						RelativePath="..\RunDir\resources\shaders\SkyBox.vs"
 						>
 					</File>
 				</Filter>
