--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -25,7 +25,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine=""
+				CommandLine="&quot;$(SolutionDir)postprocess\madplay.exe&quot; -q &quot;$(SolutionDir)postprocess\building.mp3&quot;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -96,12 +96,12 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)rundir\$(TargetName).debug$(TargetExt)&quot;&#x0D;&#x0A;&#x0D;&#x0A;"
+				CommandLine="copy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)rundir\$(TargetName).debug$(TargetExt)&quot;&#x0D;&#x0A;&quot;$(SolutionDir)postprocess\madplay.exe&quot; -q &quot;$(SolutionDir)postprocess\complete.mp3&quot;&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)/$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="0"
@@ -109,7 +109,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="&#x0D;&#x0A;"
+				CommandLine="&quot;$(SolutionDir)postprocess\madplay.exe&quot; -q &quot;$(SolutionDir)postprocess\building.mp3&quot;"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -190,7 +190,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)rundir\$(TargetName)$(TargetExt)&quot;"
+				CommandLine="copy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)rundir\$(TargetName)$(TargetExt)&quot;&#x0D;&#x0A;&quot;$(SolutionDir)postprocess\madplay.exe&quot; -q &quot;$(SolutionDir)postprocess\complete.mp3&quot;&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
