--- a/ZESDK/ZESDK.vcproj
+++ b/ZESDK/ZESDK.vcproj
@@ -44,7 +44,7 @@
 				PreprocessorDefinitions="FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_PERFHUD;ZEDEBUG_BREAKONERROR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
@@ -63,7 +63,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimaged.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName)d.lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\OggVorbis\Win32\Debug&quot;;&quot;$(ProjectDir)..\Lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Multi-threaded DLL\x86\debug&quot;"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
 			/>
@@ -111,7 +111,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\Source&quot;;&quot;$(ProjectDir)..\Include&quot;"
 				PreprocessorDefinitions="FREEIMAGE_LIB"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
@@ -130,7 +130,7 @@
 				LinkLibraryDependencies="true"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib"
 				OutputFile="$(ProjectDir)\Dist\Lib\$(ProjectName).lib"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\Lib\OggVorbis\Win32\Release&quot;;&quot;$(ProjectDir)..\Lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)..\lib\Multi-threaded DLL\x86\Release&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
