BUG : Small bug fixes. BUG : Matrix, Vector Quaternion Bug fixes. CHG : Libraries and Include files removed from repository. (You must get it from file share in order to compile the code)
svn path=/trunk/; revision=9

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -41,6 +41,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP8"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)\source&quot;;&quot;$(ProjectDir)\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;FREEIMAGE_LIB;ZEDEBUG_ENABLED;ZEDEBUG_PERFHUD"
@@ -1042,14 +1043,6 @@
 		<Filter
 			Name="Physics"
 			>
-			<File
-				RelativePath=".\Source\Physics\PhysicsModule.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Physics\PhysicsModule.h"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Particle"
