ADD : New physics sub-system added. ADD : Aegia physics module added.
svn path=/trunk/; revision=11

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1043,6 +1043,370 @@
 		<Filter
 			Name="Physics"
 			>
+			<File
+				RelativePath=".\Source\Physics\PhysicsBody.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsBody.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsBodyInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsBodyInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsBoxShapeInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsBoxShapeInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCapsuleShapeInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCapsuleShapeInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCharacterController.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCharacterController.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCharacterControllerInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCharacterControllerInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCollision.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCollision.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCollisionMask.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCollisionMask.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsConvexShapeInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsConvexShapeInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCylindricalJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsCylindricalJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsDistanceJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsDistanceJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsFixedJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsFixedJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsFreeJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsFreeJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsJoint.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsJoint.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsMaterial.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsMaterial.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsModule.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsModule.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPlaneShapeInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPlaneShapeInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPointInPlaneJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPointInPlaneJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPointOnLineJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPointOnLineJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPrismaticJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPrismaticJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPulleyJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsPulleyJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsRevoluteJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsRevoluteJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsShapeInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsShapeInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsSphereShapeInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsSphereShapeInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsSphericalJointInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsSphericalJointInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsTrigger.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsTrigger.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsTrimeshShapeInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsTrimeshShapeInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsVehicle.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsVehicle.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsVehicleInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsVehicleInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsWorld.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsWorld.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsWorldInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Physics\PhysicsWorldInfo.h"
+				>
+			</File>
+			<Filter
+				Name="Aegia"
+				>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsBody.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsBody.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsCharacterController.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsCharacterController.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsCollision.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsCollision.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsJoint.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsJoint.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsMaterial.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsMaterial.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsModule.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsModule.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsModuleDescription.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsModuleDescription.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsReport.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsReport.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsStream.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsStream.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsTrigger.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsTrigger.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsUtility.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsUtility.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsVehicle.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsVehicle.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsWorld.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Physics\Aegia\AegiaPhysicsWorld.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Particle"
