svn path=/branches/v0.04.01-PhysicsAndModel/; revision=24

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1332,6 +1332,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Map\MapFileFormat.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Map\MapFileFormat.h"
 				>
 			</File>
