svn path=/branches/v0.05.00-ZEGraphics/; revision=45

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -723,6 +723,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Core\Property.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Core\Resource.cpp"
 				>
 			</File>
