--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -137,13 +137,13 @@
 				MinimalRebuild="false"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				StructMemberAlignment="3"
 				BufferSecurityCheck="false"
 				EnableEnhancedInstructionSet="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="0"
-				WarningLevel="3"
+				WarningLevel="2"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
 			/>
@@ -161,7 +161,7 @@
 				AdditionalOptions="/fixed:no"
 				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib dsound.lib winmm.lib dxguid.lib libogg_static.lib libvorbis_static.lib libvorbisfile_static.lib freeimage.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(ProjectDir)\lib\Multi-threaded\x86\release&quot;"
+				AdditionalLibraryDirectories="&quot;$(ProjectDir)\lib\Multi-threaded DLL\x86\release&quot;;&quot;$(ProjectDir)\lib\DirectX\x86&quot;;&quot;$(ProjectDir)\lib\PhysX\x86&quot;"
 				IgnoreDefaultLibraryNames="LIBCMT"
 				GenerateDebugInformation="true"
 				SubSystem="2"
