--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -387,7 +387,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Zinek Engine Post Processor"
-						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+						CommandLine="&quot;$(ProjectDir)postprocess\zepp.exe&quot; &quot;$(InputPath)&quot;"
 						Outputs="$(InputPath).zpp"
 					/>
 				</FileConfiguration>
