svn path=/branches/v0.05.00-ZEPostProcessor/; revision=68

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -467,6 +467,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Graphics\PostProcessorNode.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\PostProcessorNode.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Graphics\ProjectiveLight.cpp"
 				>
 			</File>
