--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1254"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Zinek Engine"
 	ProjectGUID="{9CC3BAC9-51BE-4174-B3EC-F669BED2380D}"
 	RootNamespace="ComponentDevelopment"
@@ -391,6 +391,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Graphics\FrameBufferRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\FrameBufferRenderer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Graphics\GraphicsModule.cpp"
 				>
 			</File>
@@ -638,6 +646,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9FrameBufferRenderer.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9FrameBufferRenderer.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Source\Graphics\Direct3D9\D3D9Module.cpp"
 					>
 				</File>
@@ -659,14 +675,6 @@
 				</File>
 				<File
 					RelativePath=".\Source\Graphics\Direct3D9\D3D9PostProcessor.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9Renderer.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9Renderer.h"
 					>
 				</File>
 				<File
